--- a/src/index.css
+++ b/src/index.css
@@ -114,9 +114,9 @@ nav {
 }
 
 .nav__connect {
-  width: 175px;
+  /* width: 175px; */
   height: 50px;
-  margin: 0 75px 0 auto;
+  /* margin: 0 75px 0 auto; */
 
   /* background: rgba(255, 255, 255, 0.2); */
   /* color: var(--clr-white); */
